apps/email-service/deployment-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-email
  labels:
    app: ms-email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-email
  template:
    metadata:
      labels:
        app: ms-email
    spec:
      containers:
      - name: ms-email
        image: marcoschalet/email-service:v1.0.2
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "186Mi"
            cpu: "0.25"
          requests:
            memory: "130Mi"
            cpu: "0.1"
