apps/email-service/service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  labels:
    run: cache-service
spec:
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: cache-service
