apps/email-service/service-email.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-email
  labels:
    run: ms-email
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: ms-email
