apps/email-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-ingress
  labels:
    app: email
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /send
        pathType: Prefix
        backend:
          service:
            name: ms-email
            port:
              number: 80
